<resources>
    <string name="app_name">TabuTR</string>
    <string name="str_btn_mola">MOLA</string>
    <string name="str_btn_pas">PAS</string>
    <string name="str_btn_restart">Devam Et</string>
    <string name="str_btn_start">Oyunu Başlat</string>
    <string name="str_btn_tabu">TABU</string>
    <string name="str_btn_true">DOĞRU</string>
    <string name="str_taboodb">TabooDB</string>
    <string name="str_txt_desc1">Oyuncu Sayısı</string>
    <string name="str_txt_desc2">Grup Sayısı</string>
    <string name="str_txt_desc3">Kazanma Puanı</string>
    <string name="str_txt_desc4">Süre</string>
    <string name="str_txt_desc5">Pas Hakkı</string>
    <string name="str_txt_group1_hint">Grup 1</string>
    <string name="str_txt_group2_hint">Grup 2</string>
    <string name="str_txt_group3_hint">Grup 3</string>
    <string name="str_txt_group4_hint">Grup 4</string>
    <string name="str_txt_group5_hint">Grup 5</string>
    <string name="str_txt_group_forbidden1">Yasak Kelime 1</string>
    <string name="str_txt_group_forbidden2">Yasak Kelime 2</string>
    <string name="str_txt_group_forbidden3">Yasak Kelime 3</string>
    <string name="str_txt_group_forbidden4">Yasak Kelime 4</string>
    <string name="str_txt_group_forbidden5">Yasak Kelime 5</string>
    <string name="str_txt_group_name">Takım ve Oyuncu Adı</string>
    <string name="str_txt_group_point">Takım Puanı</string>
    <string name="str_txt_group_question">Anlatılacak Kelime</string>
    <string name="str_txt_group_time">Kalan Süre</string>
    <string name="str_txt_player10_hint">Oyuncu 10</string>
    <string name="str_txt_player1_hint">Oyuncu 1</string>
    <string name="str_txt_player2_hint">Oyuncu 2</string>
    <string name="str_txt_player3_hint">Oyuncu 3</string>
    <string name="str_txt_player4_hint">Oyuncu 4</string>
    <string name="str_txt_player5_hint">Oyuncu 5</string>
    <string name="str_txt_player6_hint">Oyuncu 6</string>
    <string name="str_txt_player7_hint">Oyuncu 7</string>
    <string name="str_txt_player8_hint">Oyuncu 8</string>
    <string name="str_txt_player9_hint">Oyuncu 9</string>
    <string name="str_txt_result_desc1">Genel Sonuçlar</string>
    <string name="str_txt_result_desc2">Sıra</string>
    <string name="str_txt_result_desc3">Grup</string>
    <string name="str_txt_result_desc4">Puan(D/Y)</string>
</resources>
