<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.dbcandan.taboodb.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:padding="4dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/str_taboodb"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/taboo" />

        <TextView
            android:id="@+id/id_txt_desc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/str_txt_desc2"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <SeekBar
            android:id="@+id/id_seekBar_groupCount"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:max="4"
            android:progress="1"
            app:layout_constraintTop_toBottomOf="@+id/id_txt_desc2" />

        <TextView
            android:id="@+id/id_txt_desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/str_txt_desc1"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/id_seekBar_groupCount" />

        <SeekBar
            android:id="@+id/id_seekBar_playerCount"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:max="19"
            android:progress="1"
            app:layout_constraintTop_toBottomOf="@+id/id_txt_desc1" />

        <TextView
            android:id="@+id/id_txt_desc5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/str_txt_desc5"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/id_seekBar_playerCount" />

        <SeekBar
            android:id="@+id/id_seekBar_pasCount"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:max="9"
            android:progress="2"
            app:layout_constraintTop_toBottomOf="@+id/id_txt_desc5" />

        <TextView
            android:id="@+id/id_txt_desc3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/str_txt_desc3"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/id_seekBar_pasCount" />

        <SeekBar
            android:id="@+id/id_seekBar_finishPoint"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:max="50"
            android:progress="10"
            app:layout_constraintTop_toBottomOf="@+id/id_txt_desc3" />

        <TextView
            android:id="@+id/id_txt_desc4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/str_txt_desc4"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/id_seekBar_finishPoint" />

        <SeekBar
            android:id="@+id/id_seekBar_finishTime"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:max="110"
            android:progress="50"
            app:layout_constraintTop_toBottomOf="@+id/id_txt_desc4" />

        <Button
            android:id="@+id/id_btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/style_button_start"
            android:gravity="center"
            android:text="@string/str_btn_start"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/id_seekBar_finishTime" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>


